fix: class name

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
               <a class="main-nav__link" href="#!">Contact Us</a>
             </li>
           </ul>
-          <a class="book__link" href="#!">Book an Appointment</a>
+          <a class="main-nav__book-link" href="#!">Book an Appointment</a>
         </div>
       </nav>
     </div>
