--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,9 @@
     <section class="parallax">
       <div class="parallax__wrapper">
       </div>
+      <h1 class="parallax__title"><span>Build <strong>your own</strong></span> type of nail<br>
+        & wax boutique.
+      </h1>
     </section>
   </main>
   <!-- /.page-main -->
