feat: add acquaintance section

--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,30 @@
         & wax boutique.
       </h1>
     </section>
+    <section class="acquaintance">
+      <div class="wrapper">
+        <div class="acquaintance__layers layers-acquaintance">
+          <div class="layers-acquaintance__layer-1" data-type="anim-item" data-anim-start="40">
+          </div>
+          <div class="layers-acquaintance__inner">
+            <div class="layers-acquaintance__layer-2" data-type="parallax" data-depth="0.10">
+              <img src="~images/drawn-hand.png" alt="Picture of a female hand" width="269" height="269">
+              <span class="red-cursive">Cure</span>
+            </div>
+          </div>
+        </div>
+        <div class="acquaintance__desc" data-type="parallax" data-depth="0.10">
+          <h2 class="acquaintance__title" data-type="anim-item" data-anim-start="1">
+            <span>Hi, meet</span>
+            <span>Cure.</span>
+          </h2>
+          <p class="acquaintance__subtitle">
+            A customizable, natural product-based, nail & wax botique focused on you.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- /.acquaintance -->
   </main>
   <!-- /.page-main -->
   <footer class="page-footer">
