feat: add two-images section

--- a/src/index.html
+++ b/src/index.html
@@ -72,6 +72,19 @@
       </div>
     </section>
     <!-- /.acquaintance -->
+    <section class="two-images" data-type="anim-item" data-anim-start="40">
+      <div class="two-images__box">
+        <div class="two-images__layer two-images__layer-1">
+        </div>
+      </div>
+      <div class="two-images__box">
+        <div class="two-images__layer two-images__layer-2">
+        </div>
+      </div>
+      <img src="~images/hand-n-glass.jpg" alt="Photo of a woman's hand with a glass of water" width="180" height="204"
+        data-type="anim-item" data-anim-start="4">
+    </section>
+    <!-- /.two-images -->
   </main>
   <!-- /.page-main -->
   <footer class="page-footer">
