fix: rename classes, add data atributes

--- a/src/index.html
+++ b/src/index.html
@@ -41,13 +41,14 @@
   </header>
   <!-- /.page-header -->
   <main class="page-main">
-    <section class="parallax">
-      <div class="parallax__wrapper">
+    <section class="start-screen">
+      <div class="start-screen__wrapper" data-type="parallax-background" data-depth="0.30">
       </div>
-      <h1 class="parallax__title"><span>Build <strong>your own</strong></span> type of nail<br>
+      <h1 class="start-screen__title">
         & wax boutique.
       </h1>
     </section>
+    <!-- start-screen -->
     <section class="acquaintance">
       <div class="wrapper">
         <div class="acquaintance__layers layers-acquaintance">
