--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,8 @@
       <div class="start-screen__wrapper" data-type="parallax-background" data-depth="0.30">
       </div>
       <h1 class="start-screen__title">
+        <span>Build <strong class="red-cursive">your own</strong>
+        </span> type of nail<br>
         & wax boutique.
       </h1>
     </section>
