feat: add animation for section

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
       </h1>
     </section>
     <!-- start-screen -->
-    <section class="acquaintance">
+    <section class="acquaintance is-parallax" data-type="anim-item" data-anim-start="40">
       <div class="wrapper">
         <div class="acquaintance__layers layers-acquaintance">
           <div class="layers-acquaintance__layer-1" data-type="anim-item" data-anim-start="40">
