feat: add feature section

--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,40 @@
         data-type="anim-item" data-anim-start="4">
     </section>
     <!-- /.two-images -->
+    <section class="feature">
+      <div class="wrapper">
+        <div class="feature__box" data-type="anim-item" data-anim-start="40">
+          <img class="feature__layer" src="~images/four-hands.png" alt="Photo of four hands" width="190" height="225">
+        </div>
+        <div class="feature__desc" data-type="anim-item" data-anim-start="2">
+          <h2 class="feature__title">
+            <span>
+              Clean is the culture.
+              <span class="red-cursive">Cure</span>
+              is the name.
+            </span>
+          </h2>
+          <p class="feature__text" data-type="anim-item" data-anim-start="2">
+            We focus on what others don&#8217;t: your health & your happiness.<br>
+            Cure uses hospital grade sanitation methods, including sterilizing all metal tools used in services in our
+            Autoclave and offering customers the option to take all single use tools home after each service.
+          </p>
+          <a class="book-link feature__link" href="#!">Book an Appointment</a>
+        </div>
+        <div class="feature__inner">
+          <div class="feature__images">
+            <div class="feature__image feature__image-1">
+              <img src="~images/flower.jpg" alt="Photo of a woman's hand with a glass of water" width="180"
+                height="204">
+            </div>
+            <div class="feature__image feature__image-2">
+              <img src="~images/girl.jpg" alt="Photo of a woman's hand with a glass of water" width="180" height="204">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /.feature -->
   </main>
   <!-- /.page-main -->
   <footer class="page-footer">
