feat: add service section

--- a/src/index.html
+++ b/src/index.html
@@ -123,6 +123,37 @@
       </div>
     </section>
     <!-- /.feature -->
+    <section class="service is-parallax" data-type="anim-item" data-anim-start="40">
+      <div class="wrapper">
+        <h2 class="service__title" data-type="anim-item" data-anim-start="2">Our Services</h2>
+        <div class="service__layers layers-service" data-type="anim-item" data-anim-start="40">
+          <div class="layers-service__layer layers-service__layer-1" data-type="parallax" data-depth="0.10">
+            <img src="~images/img-our-services-1.jpg" alt="Picture of a female hand" width="170" height="205">
+            <span>Pedis</span>
+          </div>
+          <div class="layers-service__layer layers-service__layer-2">
+            <img src="~images/img-our-services-2.jpg" alt="Picture of a female foots" width="254" height="339">
+            <span>Manis</span>
+          </div>
+          <div class="layers-service__layer layers-service__layer-3" data-type="parallax" data-depth="0.10">
+            <img src="~images/img-our-services-3.jpg" alt="Picture of a wax" width="170" height="205">
+            <span>Waxing</span>
+          </div>
+        </div>
+        <div class="service__desc">
+          <h3 class="service__subtitle" data-type="anim-item" data-anim-start="1">
+            <span>
+              Nails. Wax.
+            </span>
+            <span>
+              We are Cure.
+            </span>
+          </h3>
+          <a class="book-link service__link" href="#!" data-type="anim-item" data-anim-start="2">See Our Menu</a>
+        </div>
+      </div>
+    </section>
+    <!-- /.service -->
   </main>
   <!-- /.page-main -->
   <footer class="page-footer">
