feat: add two-images section

--- a/src/index.html
+++ b/src/index.html
@@ -154,6 +154,17 @@
       </div>
     </section>
     <!-- /.service -->
+    <section class="two-images" data-type="anim-item" data-anim-start="40">
+      <div class="two-images__box">
+        <div class="two-images__layer two-images__layer-3">
+        </div>
+      </div>
+      <div class="two-images__box">
+        <div class="two-images__layer two-images__layer-4">
+        </div>
+      </div>
+    </section>
+    <!-- /.two-images -->
   </main>
   <!-- /.page-main -->
   <footer class="page-footer">
