--- a/src/index.html
+++ b/src/index.html
@@ -165,6 +165,41 @@
       </div>
     </section>
     <!-- /.two-images -->
+    <section class="products">
+      <div class="wrapper">
+        <h2 class="products__title">We’re different.</h2>
+        <p class="products__subtitle">
+          Our products focus on preventing aging in the places that matter most: hands & feet.
+        </p>
+      </div>
+      <div class="products__swiper swiper">
+        <a class="products__link">Check All <br>Products</a>
+        <div class="swiper-wrapper">
+          <div class="products__slide swiper-slide">
+            <img src="~images/Berry-Preserve.png" alt="" width="160" height="225">
+          </div>
+          <div class="products__slide swiper-slide">
+            <img src="~images/Minty-Matcha.png" alt="" width="160" height="225">
+          </div>
+          <div class="products__slide swiper-slide">
+            <img src="~images/Citrus-Peel.png" alt="" width="160" height="225">
+          </div>
+          <div class="products__slide swiper-slide">
+            <img src="~images/Liquid-Gold-Oil.png" alt="" width="160" height="225">
+          </div>
+          <div class="products__slide swiper-slide">
+            <img src="~images/Omega-Strawberry.png" alt="" width="160" height="225">
+          </div>
+          <div class="products__slide swiper-slide">
+            <img src="~images/Skin-Haven-Lotion.png" alt="" width="160" height="225">
+          </div>
+          <div class="products__slide swiper-slide">
+            <img src="~images/The-Carrot-Taker-Balm.png" alt="" width="160" height="225">
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /.products -->
   </main>
   <!-- /.page-main -->
   <footer class="page-footer">
