fix: images paths

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
           </div>
           <div class="layers-acquaintance__inner">
             <div class="layers-acquaintance__layer-2" data-type="parallax" data-depth="0.10">
-              <img src="~images/drawn-hand.png" alt="Picture of a female hand" width="269" height="269">
+              <img src="~images/acquaintance/drawn-hand.png" alt="Picture of a female hand" width="269" height="269">
               <span class="red-cursive">Cure</span>
             </div>
           </div>
@@ -85,18 +85,15 @@
         <div class="two-images__layer two-images__layer-2">
         </div>
       </div>
-      <img src="~images/hand-n-glass.jpg" alt="Photo of a woman's hand with a glass of water" width="180" height="204"
-        data-type="anim-item" data-anim-start="4">
+      <img src="~images/two-images/hand-n-glass.jpg" alt="Photo of a woman's hand with a glass of water" width="180"
+        height="204" data-type="anim-item" data-anim-start="4">
     </section>
     <!-- /.two-images -->
     <section class="feature">
       <div class="wrapper">
         <div class="feature__box" data-type="anim-item" data-anim-start="40">
-          <img class="feature__layer" src="~images/four-hands.png" alt="Photo of four hands" width="190" height="225">
-        </div>
-        <div class="feature__desc" data-type="anim-item" data-anim-start="2">
-          <h2 class="feature__title">
-            <span>
+        <img class="feature__layer" src="~images/feature/four-hands.png" alt="Photo of four hands" width="190"
+          height="225">
               Clean is the culture.
               <span class="red-cursive">Cure</span>
               is the name.
@@ -111,35 +108,34 @@
         </div>
         <div class="feature__inner">
           <div class="feature__images">
-            <div class="feature__image feature__image-1">
-              <img src="~images/flower.jpg" alt="Photo of a woman's hand with a glass of water" width="180"
-                height="204">
-            </div>
-            <div class="feature__image feature__image-2">
-              <img src="~images/girl.jpg" alt="Photo of a woman's hand with a glass of water" width="180" height="204">
-            </div>
+          <div class="feature__image feature__image-1">
+            <img src="~images/feature/flower.jpg" alt="Photo of a woman's hand with a glass of water" width="180"
+              height="204">
+          </div>
+          <div class="feature__image feature__image-2">
+            <img src="~images/feature/girl.jpg" alt="Photo of a woman's hand with a glass of water" width="180"
+              height="204">
+          </div>
           </div>
         </div>
       </div>
     </section>
     <!-- /.feature -->
     <section class="service is-parallax" data-type="anim-item" data-anim-start="40">
-      <div class="wrapper">
-        <h2 class="service__title" data-type="anim-item" data-anim-start="2">Our Services</h2>
-        <div class="service__layers layers-service" data-type="anim-item" data-anim-start="40">
-          <div class="layers-service__layer layers-service__layer-1" data-type="parallax" data-depth="0.10">
-            <img src="~images/img-our-services-1.jpg" alt="Picture of a female hand" width="170" height="205">
-            <span>Pedis</span>
-          </div>
-          <div class="layers-service__layer layers-service__layer-2">
-            <img src="~images/img-our-services-2.jpg" alt="Picture of a female foots" width="254" height="339">
-            <span>Manis</span>
-          </div>
-          <div class="layers-service__layer layers-service__layer-3" data-type="parallax" data-depth="0.10">
-            <img src="~images/img-our-services-3.jpg" alt="Picture of a wax" width="170" height="205">
-            <span>Waxing</span>
-          </div>
+      <div class="service__layers layers-service" data-type="anim-item" data-anim-start="40">
+        <div class="layers-service__layer layers-service__layer-1" data-type="parallax" data-depth="0.10">
+          <img src="~images/service/img-our-services-1.jpg" alt="Picture of a female hand" width="170" height="205">
+          <span>Pedis</span>
         </div>
+        <div class="layers-service__layer layers-service__layer-2">
+          <img src="~images/service/img-our-services-2.jpg" alt="Picture of a female foots" width="254" height="339">
+          <span>Manis</span>
+        </div>
+        <div class="layers-service__layer layers-service__layer-3" data-type="parallax" data-depth="0.10">
+          <img src="~images/service/img-our-services-3.jpg" alt="Picture of a wax" width="170" height="205">
+          <span>Waxing</span>
+        </div>
+      </div>
         <div class="service__desc">
           <h3 class="service__subtitle" data-type="anim-item" data-anim-start="1">
             <span>
