fix: rename link class

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
               <a class="main-nav__link" href="#!">Contact Us</a>
             </li>
           </ul>
-          <a class="book-link main-nav__book-link" href="#!">Book an Appointment</a>
+        <a class="page-link main-nav__book-link" href="#!">Book an Appointment</a>
         </div>
       </nav>
     </div>
@@ -104,7 +104,7 @@
             Cure uses hospital grade sanitation methods, including sterilizing all metal tools used in services in our
             Autoclave and offering customers the option to take all single use tools home after each service.
           </p>
-          <a class="book-link feature__link" href="#!">Book an Appointment</a>
+        <a class="page-link feature__link" href="#!">Book an Appointment</a>
         </div>
         <div class="feature__inner">
           <div class="feature__images">
@@ -145,8 +145,7 @@
               We are Cure.
             </span>
           </h3>
-          <a class="book-link service__link" href="#!" data-type="anim-item" data-anim-start="2">See Our Menu</a>
-        </div>
+        <a class="page-link service__link" href="#!" data-type="anim-item" data-anim-start="2">See Our Menu</a>
       </div>
     </section>
     <!-- /.service -->
