feat: add footer

--- a/src/index.html
+++ b/src/index.html
@@ -198,7 +198,63 @@
   </main>
   <!-- /.page-main -->
   <footer class="page-footer">
-    <div class="wrapper">
+    <div class="page-footer__heading heading-footer">
+      <div class="heading-footer__parallax-bg parallax-bg">
+        <img class="parallax-bg__img" src="~images/bg-footer.png" alt="Photo of two persons standing with their backs">
+      </div>
+      <div class="heading-footer__inner">
+        <p class="heading-footer__text">Calling all Nail Techs <br>and Waxing Specialists</p>
+        <h3 class="heading-footer__title" data-type="anim-item" data-anim-start="1">
+          <span>We invite</span>
+          <span>you to join</span>
+          <span>Team Cure.</span>
+        </h3>
+        <div class="heading-footer__links" data-type="anim-item" data-anim-start="1">
+          <a class="heading-footer__apply page-link" href="mailto:yaskevi4kseniya@gmail.com" target="_blank">Apply
+            Now</a>
+          <a class="heading-footer__link" href="mailto:yaskevi4kseniya@gmail.com" target="_blank">
+            wenailusa@gmail.com<span class="red-cursive">Write Us</span>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div>
+      <div class="page-footer__content content-footer">
+        <div class="content-footer__desc">
+          <h4 class="content-footer__title">Have Questions?</h4>
+          <a class="content-footer__link page-link" href="mailto:yaskevi4kseniya@gmail.com" target="_blank">Tell us
+            more.</a>
+        </div>
+        <div>
+          <div class="content-footer__lists">
+            <ul class="content-footer__list">
+              <li>
+                <a href="https://www.instagram.com" target="_blank">
+                  Instagram
+                </a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com" target="_blank">
+                  Facebook
+                </a>
+              </li>
+            </ul>
+            <ul class="content-footer__list">
+              <li>
+                <a href="#!" target="_blank">
+                  Privacy Policy
+                </a>
+              </li>
+              <li>
+                <a href="#!" target="_blank">
+                  Terms of Service
+                </a>
+              </li>
+            </ul>
+          </div>
+          <h4 class="content-footer__title content-footer__title--bottom">Nailed it.</h4>
+        </div>
+      </div>
     </div>
   </footer>
   <!-- /.page-footer -->
