feat: add slogan section

--- a/src/index.html
+++ b/src/index.html
@@ -195,6 +195,26 @@
       </div>
     </section>
     <!-- /.products -->
+    <section class="slogan" data-type="anim-item" data-anim-start="4">
+      <div class="slogan__layers layers-slogan">
+        <div class="layers-slogan__layer layers-slogan__layer-1">
+          <h2 class="slogan__title slogan__title--first-part">Life is too short</h2>
+          <span class="slogan__red-line"></span>
+          <h2 class="slogan__title slogan__title--second-part">for&nbsp;unpolished <br>nails.</h2>
+          <div class="layers-slogan__layer layers-slogan__layer-2">
+            <img src="~images/slogan/img-life-is-too.jpg" alt="Picture of a woman" width="240" height="320">
+          </div>
+          <span class="red-cursive">Cure</span>
+          <div class="layers-slogan__layer layers-slogan__layer-3">
+            <img src="~images/grey-red-group.png" alt="Gray-red group abstract" width="198" height="224">
+          </div>
+          <div class="layers-slogan__layer layers-slogan__layer-4">
+            <img src="~images/dots.png" alt="Picture of dots" width="81" height="75">
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /.slogan -->
   </main>
   <!-- /.page-main -->
   <footer class="page-footer">
