fix: refactor start-screen section

--- a/src/index.html
+++ b/src/index.html
@@ -40,12 +40,17 @@
   <!-- /.page-header -->
   <main class="page-main">
     <section class="start-screen">
-      <div class="start-screen__wrapper" data-type="parallax-background" data-depth="0.30">
+      <div class="start-screen__parallax-bg parallax-bg">
+        <img class="parallax-bg__img" src="~images/start-screen/bg-main.png"
+          alt="Photo of two hands touching each other">
       </div>
-      <h1 class="start-screen__title">
+      <h1 class="start-screen__title start-screen__title--mobile">
         <span>Build <strong class="red-cursive">your own</strong>
-        </span> type of nail<br>
-        & wax boutique.
+        </span> type of nail & wax boutique.
+      </h1>
+      <h1 class="start-screen__title start-screen__title--tablet">
+        <span>Build <strong class="red-cursive">your own</strong>
+        </span> type of nail, wax & facial boutique.
       </h1>
     </section>
     <!-- start-screen -->
