feat: add images

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,10 @@
           <a class="acquaintance__link" href="#!">+</a>
         </p>
       </div>
-      </div>
+      <img class="acquaintance__img acquaintance__img--group" src="~images/grey-green-group.png"
+        alt="Picture of a female hand" width="150" height="150">
+      <img class="acquaintance__img acquaintance__img--dots" src="~images/dots.png" alt="Picture of dots" width="50"
+        height="50">
     </section>
     <!-- /.acquaintance -->
     <section class="two-images" data-type="anim-item" data-anim-start="40">
@@ -121,7 +124,7 @@
             <img src="~images/feature/girl.jpg" alt="Photo of a woman's hand with a glass of water" width="180"
               height="204">
           </div>
-          </div>
+          <img class="feature__dots" src="~images/dots.png" alt="Photo of dots" width="50" height="50">
         </div>
       </div>
     </section>
