--- a/src/index.html
+++ b/src/index.html
@@ -130,6 +130,7 @@
     </section>
     <!-- /.feature -->
     <section class="service is-parallax" data-type="anim-item" data-anim-start="40">
+      <h3 class="service__title" data-type="anim-item" data-anim-start="2">Our Services</h3>
       <div class="service__layers layers-service" data-type="anim-item" data-anim-start="40">
         <div class="layers-service__layer layers-service__layer-1" data-type="parallax" data-depth="0.10">
           <img src="~images/service/img-our-services-1.jpg" alt="Picture of a female hand" width="170" height="205">
