fix: refactor products section

--- a/src/index.html
+++ b/src/index.html
@@ -170,35 +170,50 @@
     </section>
     <!-- /.two-images -->
     <section class="products">
-      <div class="wrapper">
-        <h2 class="products__title">We’re different.</h2>
-        <p class="products__subtitle">
+      <div class="products__desc">
+        <h3 class="products__title" data-type="anim-item" data-anim-start="2">We’re different.</h3>
+        <p class="products__subtitle" data-type="anim-item" data-anim-start="2">
           Our products focus on preventing aging in the places that matter most: hands & feet.
         </p>
       </div>
-      <div class="products__swiper swiper">
-        <a class="products__link">Check All <br>Products</a>
+      <a class="products__link" href="#!">Check All <br>Products</a>
+      <div class="products__swiper swiper" data-type="anim-item" data-anim-start="4">
         <div class="swiper-wrapper">
-          <div class="products__slide swiper-slide">
-            <img src="~images/Berry-Preserve.png" alt="" width="160" height="225">
+          <a class="products__slide products__link products__link-inside swiper-slide" href="#!">
+            <span>Check All <br>Products</span>
+          </a>
+          <div class="products__slide swiper-slide slide">
+            <img class="slide__image" src="~images/products/Berry-Preserve.png" alt="" width="160" height="225">
+            <span class="slide__label red-cursive">Feet</span>
+            <img class="slide__background slide__background--grey-group" src="~images/grey-group.png"
+              alt="Picture of grey-dots" width="146" height="144">
           </div>
-          <div class="products__slide swiper-slide">
-            <img src="~images/Minty-Matcha.png" alt="" width="160" height="225">
+          <div class="products__slide swiper-slide slide">
+            <img class="slide__image" src="~images/products/Minty-Matcha.png" alt="" width="160" height="225">
+            <img class="slide__background slide__background--grey-dots" src="~images/grey-dots.png"
+              alt="Picture of grey-dots" width="146" height="144">
           </div>
-          <div class="products__slide swiper-slide">
-            <img src="~images/Citrus-Peel.png" alt="" width="160" height="225">
+          <div class="products__slide swiper-slide slide">
+            <img class="slide__image" src="~images/products/Citrus-Peel.png" alt="" width="160" height="225">
+            <span class="slide__label red-cursive">Handy</span>
           </div>
-          <div class="products__slide swiper-slide">
-            <img src="~images/Liquid-Gold-Oil.png" alt="" width="160" height="225">
+          <div class="products__slide swiper-slide slide">
+            <img class="slide__image" src="~images/products/Liquid-Gold-Oil.png" alt="" width="160" height="225">
+            <img class="slide__background slide__background--grey-group" src="~images/grey-group.png"
+              alt="Picture of grey-dots" width="146" height="144">
+            <img class="slide__background slide__background--grey-dots" src="~images/grey-dots.png"
+              alt="Picture of grey-dots" width="146" height="144">
           </div>
-          <div class="products__slide swiper-slide">
-            <img src="~images/Omega-Strawberry.png" alt="" width="160" height="225">
+          <div class="products__slide swiper-slide slide">
+            <img class="slide__image" src="~images/products/Omega-Strawberry.png" alt="" width="160" height="225">
           </div>
-          <div class="products__slide swiper-slide">
-            <img src="~images/Skin-Haven-Lotion.png" alt="" width="160" height="225">
+          <div class="products__slide swiper-slide slide">
+            <img class="slide__image" src="~images/products/Skin-Haven-Lotion.png" alt="" width="160" height="225">
+            <img class="slide__background slide__background--grey-dots" src="~images/grey-dots.png"
+              alt="Picture of grey-dots" width="146" height="144">
           </div>
-          <div class="products__slide swiper-slide">
-            <img src="~images/The-Carrot-Taker-Balm.png" alt="" width="160" height="225">
+          <div class="products__slide swiper-slide slide">
+            <img class="slide__image" src="~images/products/The-Carrot-Taker-Balm.png" alt="" width="160" height="225">
           </div>
         </div>
       </div>
